[project]
name = "awpie"
version = "0.2.0"
description = "Using Python as awk alternative"
authors = [
    { name = "AN Long", email = "aisk1988@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"
license = {text = "MIT License"}

[project.scripts]
awpie = "awpie:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/awpie.py"]
